Changes since 3.2.1
0. Numerous cleanups, memory leaks corrected, etc.  See README and NEWS.
1. Code cleanup and simplification of directory listing and file
   retrieval code.
2. bbftpd: Use RSA_generate_key_ex instead of deprecated
   RSA_generate_key.  Additional code simplification/cleanup in
   bbftpd_crypt.c.
3. bbftpd: bbftpd_log_reopen was not opening the user-specified
   logfile in child processes
4. bbftpd: Simplified the bbftpd_store functions by removing
   large sections of duplicated code and added additional log
   messages.  Other supporting code changes were made.
5. bbftpd: If an error occured during the creation of the data transfer
   sockets, the previously opened sockets were not being closed.
6. Updated the bbftp-get script with a --verbose option
7. bbftp:  Make connectviassh static; updated help message to indicate
   that -D implies version 2 protocol
8. bbftp: Rewrote essentually all of bbft.c to make it more
   maintainable.